# MiniPack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dir_scan.cpp  dir_scan.h  encoding.h  encoding_posix.cpp  encoding_windows.cpp  file_list_reader.cpp  file_list_reader.h  main.cpp  mini_pack_builder.cpp  mini_pack_builder.h  mini_pack_builder_file.cpp  mini_pack_builder_file.h  mini_pack_writer_file.cpp  mini_pack_writer_vector.cpp  minipack_format.h  pack_info_main.cpp  pack_reader.cpp  pack_reader.h  pack_reader_index.cpp  pack_reader_io.cpp  pack_reader_io.h  save_to_file.cpp  save_to_file.h  utf16_to_utf8.cpp  utf16_to_utf8.h  utf32_to_utf8.cpp  utf8_to_utf16.cpp  utf8_to_utf16.h  utf8_to_utf16_posix.cpp  utf8_to_utf16_windows.cpp  utf_conv.h
